Throw RangeError for exponentialRamp to value 0

For an exponentialRampToValueAtTime automation, if the target value is
0, a RangeError should be thrown.

BUG=726793
TEST=audioparam-exceptional-values.html

Change-Id: I4bd99cd7fd6fcfab6c59d31eb72eb4c30be8a1f1